--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "scripts": {
