--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-image-magnify": "^2.7.4",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
-    "reactotron-react-js": "^3.3.7",
-    "reactotron-redux": "^3.1.3",
-    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
@@ -52,6 +51,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.2",
+    "jest-canvas-mock": "^2.2.0",
     "prettier": "^2.0.5"
   }
 }
